verify account api

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ mongo='mongodb://localhost:27017/reddrop'
 # website
 website='http://localhost:4000'
 
+# name 
+Company='Reddrop'
+
 # cloudinary
 cloud_name= 'solutech11'
 api_key='195948511332187'
