--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Stech&Jessy",
   "license": "MIT",
   "scripts": {
-    "dev":"node-dev App"
+    "dev": "node-dev App"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -20,6 +20,7 @@
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "node-dev": "^8.0.0",
+    "nodemailer": "^6.9.1",
     "rand-token": "^1.0.1"
   }
 }
