--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
     "date-and-time": "^2.4.2",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
