--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # mongodb link
-mongo='mongodb://localhost:27017/reddrop'
+mongo='mongodb://127.0.0.1:27017/reddrop'
 
 # website
 website='http://localhost:4000'
