--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # mongodb link
-mongo='mongodb://127.0.0.1:27017/reddrop'
+mongo='mongodb+srv://jessyelisius:vBwa3MtREuIb6sZm@freereddropdb.3mdzd0u.mongodb.net/?retryWrites=true&w=majority'
 
 # website
 website='http://localhost:4000'
