--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@
 mongo='mongodb+srv://jessyelisius:vBwa3MtREuIb6sZm@freereddropdb.3mdzd0u.mongodb.net/?retryWrites=true&w=majority'
 
 # website
-website='http://localhost:4000'
+website='https://reddrop-api.onrender.com'
 
 # name 
-Company='Reddrop'
+Company='RedDrop'
 
 # cloudinary
-cloud_name= 'solutech11'
-api_key='195948511332187'
-api_secret='d7lpvzOQEgaO5t9S1ld22Vh0srE'
+cloud_name= 'jessyphantom'
+api_key='936665494134479'
+api_secret='IUO0tNTi-xH2LSqoHuINjRmoxTA'
 profile='reddrop/profile/'
 document='redrop/hospitalDoc/'
 
